fix: fix mobile version on safari (#95)
* fix: fix mobile version on safari

* fix: fix logo backgrounds

* fix: fix logo background color on smaller screens

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -118,7 +118,7 @@ html[data-theme-override="light"] {
 }
 
 .docs-wrapper .navbar__items {
-    @apply bg-white dark:bg-neutral-950;
+    // @apply bg-white dark:bg-neutral-950;
 }
 
 .docs-wrapper .main-wrapper,
@@ -128,6 +128,13 @@ html[data-theme-override="light"] {
     position: relative;
     translate: -50% 0;
     padding: 0 2rem;
+}
+
+.plugin-pages {
+    .logo-container {
+        box-shadow: none;
+        background: none;
+    }
 }
 
 .navbar {
@@ -165,12 +172,20 @@ html[data-theme-override="light"] {
     .navbar-sidebar {
         @apply h-fit dark:bg-neutral-900;
 
+        .navbar-sidebar__brand {
+            @apply relative;
+        }
+
+        .navbar-sidebar__items {
+            height: auto;
+        }
+
         .navbar-sidebar__item.menu {
             padding: 10px 6px !important;
         }
 
         .color-mode-toggle {
-            @apply absolute top-[21px] right-6 h-fit;
+            @apply absolute top-1/2 right-6 -translate-1/2;
         }
 
         .menu__link--sublist::after {
@@ -258,7 +273,7 @@ html[data-theme-override="light"] {
             @apply m-0 h-8 w-8;
         }
         b {
-            @apply flex h-8 items-center rounded-lg px-2 font-mono hover:bg-neutral-100 dark:hover:bg-neutral-200/10;
+            @apply flex h-8 items-center rounded-lg px-2 font-mono font-semibold hover:bg-neutral-100 dark:hover:bg-neutral-200/10;
         }
     }
 }
