--- a/src/theme/ColorModeToggle/styles.module.css
+++ b/src/theme/ColorModeToggle/styles.module.css
@@ -1,19 +1,19 @@
 @reference '../../scss/custom.scss';
 
 .toggle {
-    @apply flex h-8 w-8 justify-center rounded-lg hover:bg-neutral-100 dark:hover:bg-neutral-300/10;
+    @apply flex justify-center rounded-lg;
+    height: 21px;
+    width: 21px;
 }
 
 .toggleButton {
-    @apply h-4 w-4;
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 100%;
     transition: background var(--ifm-transition-fast);
 }
 
 .toggleIcon {
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1rem;
+    height: 1rem;
 }
